[package]
name = "advent-bins"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
thiserror = "1.0.31"
vectrix = "0.2.0"
advent = { path = "crates/advent" }

[workspace]
members = [
    "crates/advent",
    "crates/ascii-art",
    "crates/cli",
    "crates/human",
]

[features]
json = ["advent/json"]

[[bin]]
name = "201801"
path = "2018/01.rs"

[[bin]]
name = "201802"
path = "2018/02.rs"

[[bin]]
name = "201803"
path = "2018/03.rs"

[[bin]]
name = "201804"
path = "2018/04.rs"

[[bin]]
name = "201805"
path = "2018/05.rs"

[[bin]]
name = "201806"
path = "2018/06.rs"

[[bin]]
name = "201807"
path = "2018/07.rs"

[[bin]]
name = "201808"
path = "2018/08.rs"

[[bin]]
name = "201809"
path = "2018/09.rs"

[[bin]]
name = "201810"
path = "2018/10.rs"

[[bin]]
name = "201811"
path = "2018/11.rs"

[[bin]]
name = "201812"
path = "2018/12.rs"

[[bin]]
name = "201813"
path = "2018/13.rs"

[[bin]]
name = "2019-bench-intcode"
path = "2019/bench-intcode.rs"

[[bin]]
name = "201901"
path = "2019/01.rs"

[[bin]]
name = "201902"
path = "2019/02.rs"

[[bin]]
name = "201903"
path = "2019/03.rs"

[[bin]]
name = "201904"
path = "2019/04.rs"

[[bin]]
name = "201905"
path = "2019/05.rs"

[[bin]]
name = "201906"
path = "2019/06.rs"

[[bin]]
name = "201907"
path = "2019/07.rs"

[[bin]]
name = "201908"
path = "2019/08.rs"

[[bin]]
name = "201909"
path = "2019/09.rs"

[[bin]]
name = "201910"
path = "2019/10.rs"

[[bin]]
name = "201911"
path = "2019/11.rs"

[[bin]]
name = "201912"
path = "2019/12.rs"

[[bin]]
name = "201913"
path = "2019/13.rs"

[[bin]]
name = "201914"
path = "2019/14.rs"

[[bin]]
name = "201915"
path = "2019/15.rs"

[[bin]]
name = "201916"
path = "2019/16.rs"

[[bin]]
name = "201917"
path = "2019/17.rs"

[[bin]]
name = "201918"
path = "2019/18.rs"

[[bin]]
name = "201919"
path = "2019/19.rs"

[[bin]]
name = "201920"
path = "2019/20.rs"

[[bin]]
name = "201921"
path = "2019/21.rs"

[[bin]]
name = "201922"
path = "2019/22.rs"

[[bin]]
name = "201923"
path = "2019/23.rs"

[[bin]]
name = "201924"
path = "2019/24.rs"

[[bin]]
name = "201925"
path = "2019/25.rs"

[[bin]]
name = "202001"
path = "2020/01.rs"

[[bin]]
name = "202002"
path = "2020/02.rs"

[[bin]]
name = "202003"
path = "2020/03.rs"

[[bin]]
name = "202004"
path = "2020/04.rs"

[[bin]]
name = "202005"
path = "2020/05.rs"

[[bin]]
name = "202006"
path = "2020/06.rs"

[[bin]]
name = "202007"
path = "2020/07.rs"

[[bin]]
name = "202008"
path = "2020/08.rs"

[[bin]]
name = "202009"
path = "2020/09.rs"

[[bin]]
name = "202010"
path = "2020/10.rs"

[[bin]]
name = "202011"
path = "2020/11.rs"

[[bin]]
name = "202012"
path = "2020/12.rs"

[[bin]]
name = "202013"
path = "2020/13.rs"

[[bin]]
name = "202014"
path = "2020/14.rs"

[[bin]]
name = "202015"
path = "2020/15.rs"

[[bin]]
name = "202016"
path = "2020/16.rs"

[[bin]]
name = "202017"
path = "2020/17.rs"

[[bin]]
name = "202018"
path = "2020/18.rs"

[[bin]]
name = "202019"
path = "2020/19.rs"

[[bin]]
name = "202020"
path = "2020/20.rs"

[[bin]]
name = "202021"
path = "2020/21.rs"

[[bin]]
name = "202022"
path = "2020/22.rs"

[[bin]]
name = "202023"
path = "2020/23.rs"

[[bin]]
name = "202024"
path = "2020/24.rs"

[[bin]]
name = "202025"
path = "2020/25.rs"

[[bin]]
name = "202101"
path = "2021/01.rs"

[[bin]]
name = "202102"
path = "2021/02.rs"

[[bin]]
name = "202103"
path = "2021/03.rs"

[[bin]]
name = "202104"
path = "2021/04.rs"

[[bin]]
name = "202105"
path = "2021/05.rs"

[[bin]]
name = "202106"
path = "2021/06.rs"

[[bin]]
name = "202107"
path = "2021/07.rs"

[[bin]]
name = "202108"
path = "2021/08.rs"

[[bin]]
name = "202109"
path = "2021/09.rs"

[[bin]]
name = "202110"
path = "2021/10.rs"

[[bin]]
name = "202111"
path = "2021/11.rs"

[[bin]]
name = "202112"
path = "2021/12.rs"

[[bin]]
name = "202113"
path = "2021/13.rs"

[[bin]]
name = "202114"
path = "2021/14.rs"

[[bin]]
name = "202115"
path = "2021/15.rs"

[[bin]]
name = "202116"
path = "2021/16.rs"

[[bin]]
name = "202117"
path = "2021/17.rs"

[[bin]]
name = "202118"
path = "2021/18.rs"

[[bin]]
name = "202119"
path = "2021/19.rs"

[[bin]]
name = "202120"
path = "2021/20.rs"

[[bin]]
name = "202121"
path = "2021/21.rs"

[[bin]]
name = "202122"
path = "2021/22.rs"

[[bin]]
name = "202123"
path = "2021/23.rs"

[[bin]]
name = "202124"
path = "2021/24.rs"

[[bin]]
name = "202125"
path = "2021/25.rs"
