[package]
name = "advent-2019"
version = "0.1.0"
authors = ["Ross MacArthur <ross@macarthur.io>"]
edition = "2018"
publish = false

[lib]
name = "advent"

[dependencies]
clap = { version = "3.0.0-beta.2", default-features = false, features = ["derive", "std"] }
itertools = "0.9.0"
regex-macro = "0.1.1"
