[package]
name = "advent-2020"
version = "0.1.0"
authors = ["Ross MacArthur <ross@macarthur.io>"]
edition = "2018"
publish = false

[dependencies]
itertools = "0.10.0"
once_cell = "1.5.2"
recap = "0.1.1"
reduce = "0.1.4"
regex = "1.4.3"
regex-macro = "0.1.1"
serde = { version = "1.0.123", features = ["derive"] }
vector = { path = "../crates/vector" }

[dev-dependencies]
criterion = "0.3.4"

[[bench]]
name = "main"
harness = false
