[package]
name = "advent-2020"
version = "0.0.0"
authors = ["Ross MacArthur <ross@macarthur.io>"]
edition = "2018"
publish = false

[dependencies]
itertools = "0.10.0"
once_cell = "1.7.2"
recap = "0.1.1"
regex = "1.4.5"
regex-macro = "0.1.1"
serde = { version = "1.0.124", features = ["derive"] }
vectrix = { path = "../crates/vectrix-ext" }

[dev-dependencies]
criterion = "0.3.4"

[[bench]]
name = "main"
harness = false
