[package]
name = "advent"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
ahash = "0.7.6"
argh = "0.1.7"
either = "1.6.1"
itermore = "0.2.0"
itertools = "0.10.3"
regex-macro = "0.2.0"
serde = { version = "1.0.137", features = ["derive"], optional = true }
serde_json = { version = "1.0.81", optional = true }
vectrix = "0.2.0"
yansi = "0.5.1"
ascii-art = { path = "../ascii-art" }
human = { path = "../human" }

[features]
json = ["serde", "serde_json"]
