[package]
name = "advent"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
argh = { workspace = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
yansi = { workspace = true }
ascii-art = { path = "../ascii-art" }
human = { path = "../human" }
prelude = { path = "../prelude", optional = true }

[features]
json = ["dep:serde", "dep:serde_json"]
prelude = ["dep:prelude"]
