[package]
name = "bench"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
anyhow = { workspace = true }
argh = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
upon = { workspace = true }
advent = { path = "../advent", features = ["json"] }
some = { path = "../some" }
