[package]
name = "then"
version = "0.1.0"
authors = ["Ross MacArthur <ross@macarthur.io>"]
edition = "2021"
description = "bool::then functions but named properly"
readme = "README.md"
repository = "https://github.com/rossmacarthur/advent"
license = "MIT OR Apache-2.0"
keywords = ["bool", "then"]
categories = ["rust-patterns"]
include = ["src/**/*", "LICENSE-*", "README.md"]
